--- a/Assets/Scripts/DialogCommon/DialogCommon.asmdef
+++ b/Assets/Scripts/DialogCommon/DialogCommon.asmdef
@@ -1,11 +1,9 @@
 {
-    "name": "App",
+    "name": "DialogCommon",
     "rootNamespace": "",
     "references": [
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:9e24947de15b9834991c9d8411ea37cf"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
