First iteration maker layout

--- a/Assets/Scripts/DialogPlayer/DialogPlayer.asmdef
+++ b/Assets/Scripts/DialogPlayer/DialogPlayer.asmdef
@@ -1,3 +1,17 @@
 {
-	"name": "DialogPlayer"
+    "name": "DialogPlayer",
+    "rootNamespace": "",
+    "references": [
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:3d67845edb7356540bf98893073d062a"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
