--- a/Assets/Scripts/DialogMaker/DialogMaker.asmdef
+++ b/Assets/Scripts/DialogMaker/DialogMaker.asmdef
@@ -1,3 +1,4 @@
 {
-	"name": "DialogMaker"
+	"name": "DialogMaker",
+	"references":[ "GUID:0d8beb7f090555447a6cf5ce9e54dbb4", "GUID:3d67845edb7356540bf98893073d062a" ]
 }
