--- a/Assets/Scripts/DialogMaker/DialogMaker.asmdef
+++ b/Assets/Scripts/DialogMaker/DialogMaker.asmdef
@@ -1,4 +1,20 @@
 {
-	"name": "DialogMaker",
-	"references":[ "GUID:0d8beb7f090555447a6cf5ce9e54dbb4", "GUID:3d67845edb7356540bf98893073d062a" ]
+    "name": "DialogMaker",
+    "rootNamespace": "",
+    "references": [
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:3d67845edb7356540bf98893073d062a",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:84651a3751eca9349aac36a66bba901b"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
