--- a/Assets/Scripts/DialogCommon/DialogCommon.asmdef
+++ b/Assets/Scripts/DialogCommon/DialogCommon.asmdef
@@ -3,7 +3,10 @@
     "rootNamespace": "",
     "references": [
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:72743cdc1f4292741948ae9b11e84b68",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
