--- a/Assets/Scripts/DialogMaker/DialogMaker.asmdef
+++ b/Assets/Scripts/DialogMaker/DialogMaker.asmdef
@@ -6,7 +6,8 @@
         "GUID:3d67845edb7356540bf98893073d062a",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
-        "GUID:84651a3751eca9349aac36a66bba901b"
+        "GUID:84651a3751eca9349aac36a66bba901b",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
