--- a/Assets/Scripts/DialogPlayer/DialogPlayer.asmdef
+++ b/Assets/Scripts/DialogPlayer/DialogPlayer.asmdef
@@ -8,7 +8,8 @@
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:f4cb6d2c24715bd4884385645277f011",
-        "GUID:9cf69526e1660aa45bc90c9b4ea11bc2"
+        "GUID:9cf69526e1660aa45bc90c9b4ea11bc2",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
